tests/cmd_set_bad.out
./cmd_set_bad.svx:5:17: error: Expecting numeric field, found " reference"
./cmd_set_bad.svx:11:1: error: End of line not blank
./cmd_set_bad.svx:13:1: error: End of line not blank
./cmd_set_bad.svx:20:23: error: Expecting numeric field, found ".0"
./cmd_set_bad.svx:22:22: error: Expecting numeric field, found "+1.0"
./cmd_set_bad.svx:28:12: error: Character "." not allowed in station name (use *SET NAMES to set allowed characters)
./cmd_set_bad.svx:31:10: error: Expecting numeric field, found "-"
./cmd_set_bad.svx:34:6: error: Unknown character class "FormFeed"
./cmd_set_bad.svx:35:6: warning: ROOT is deprecated

Removing trailing traverses...

Concatenating traverses...

Simplifying network...

Calculating network...

Calculating traverses...

Calculating trailing traverses...

Calculating statistics...

Survey contains 1 survey station, joined by 0 legs.
There are 0 loops.
Total length of survey legs =    0.00m (   0.00m adjusted)
Total plan length of survey legs =    0.00m
Total vertical length of survey legs =    0.00m
./cmd_set_bad.svx:30: warning: Station "bar.1" referred to by *entrance or *export but never used
   1 0-node.
There were 2 warning(s) and 8 error(s) - no output files produced.
